function(add_simple_mpi_test basename)
  add_executable(${basename} ${basename}.cpp)
  target_link_libraries(${basename} mpicxx)
  foreach(nproc ${ARGN})
    add_test(${basename}_${nproc} ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/${basename})
  endforeach()
endfunction()

add_simple_mpi_test(ibroadcast_test 2 7 8)
add_simple_mpi_test(all_gather_test 2 7 8)
add_simple_mpi_test(all_reduce_test 2 7 8)
add_simple_mpi_test(all_to_all_test 2 7 8)
add_simple_mpi_test(broadcast_stl_test 2 7 8)
add_simple_mpi_test(broadcast_test 2 7 10)
add_simple_mpi_test(cartesian_topology_init_test 1 2 7 10)
add_simple_mpi_test(cartesian_topology_test 1 2 7 10)
add_simple_mpi_test(gather_test 1 2 7 10)
add_simple_mpi_test(graph_topology_test 2 7 10)
add_simple_mpi_test(groups_test 1 2 7 10)
add_simple_mpi_test(is_mpi_op_test 1 2 7 10)
add_simple_mpi_test(mt_level_test 1 2 7 10)
add_simple_mpi_test(nonblocking_test 1 2 7 10)
add_simple_mpi_test(pointer_test 2 7 10)
add_simple_mpi_test(reduce_test 1 2 7 10)
add_simple_mpi_test(ring_test 2 7 10)
add_simple_mpi_test(scan_test 1 2 7 10)
add_simple_mpi_test(scatter_test 1 2 7 10)
add_simple_mpi_test(sendrecv_test 1 2 7 10)
add_simple_mpi_test(sendrecv_vector 1 2 7 10)
add_simple_mpi_test(skeleton_content_test 2 7 10)
add_simple_mpi_test(version_test 1 2)

add_executable(mt_init_test mt_init_test.cpp)
target_link_libraries(mt_init_test mpicxx)
add_test(mt_init_test_single_1     ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/mt_init_test single)
add_test(mt_init_test_funneled_1   ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/mt_init_test funneled)
add_test(mt_init_test_serialized_1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/mt_init_test serialized)
add_test(mt_init_test_multiple_1   ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/mt_init_test multiple)

add_test(mt_init_test_single_4     ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/mt_init_test single)
add_test(mt_init_test_funneled_4   ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/mt_init_test funneled)
add_test(mt_init_test_serialized_4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/mt_init_test serialized)
add_test(mt_init_test_multiple_4   ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${nproc} ${CMAKE_CURRENT_BINARY_DIR}/mt_init_test multiple)
